[package]
name = "migration-suite"
version = "0.1.0"
description = "Migrate artifacts to an airgapped environment"
authors = ["Jack <60209373+OpoJack@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
flate2 = "1.1.4"
futures = "0.3.31"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.11.0"
tar = "0.4.44"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.23"

[dev-dependencies]
tempfile = "3.23.0"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
